# iiko_server_api_sdk

./: .env.example  .gitignore  Cargo.toml  README.md
docs/: OLAP_FIELDS.md  PROCUREMENT_PROCESS_STEPS.md
src/: client.rs  config.rs  error.rs  lib.rs
src/endpoints/: assembly_charts.rs  auth.rs  corporation.rs  documents.rs  employees.rs  entities.rs  events.rs  images.rs  inventory.rs  mod.rs  product_scales.rs  products.rs  replication.rs  reports.rs  suppliers.rs
src/xml/: mod.rs
src/xml/request/: events.rs  mod.rs
src/xml/response/: assembly_charts.rs  common.rs  corporation.rs  documents.rs  employees.rs  entities.rs  events.rs  images.rs  inventory.rs  mod.rs  product_scales.rs  products.rs  replication.rs  reports.rs  suppliers.rs
tests/: assembly_charts_test.rs  categories_test.rs  common.rs  corporation_test.rs  documents_test.rs  entities_test.rs  events_test.rs  images_test.rs  integration_test.rs  internal_transfers_test.rs  product_scales_test.rs  products_test.rs  replication_test.rs  reports_test.rs  suppliers_test.rs
