[package]
name = "iiko-server-api-sdk"
version = "0.1.0"
edition = "2024"
authors = ["Tigran Zhampeissov <zhampeisov_tigran@mail.ru>"]
description = "Simple Rust SDK for iiko server API"
license = "MIT OR Apache-2.0"
repository = ""

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.147"
quick-xml = { version = "0.38.4", features = ["serialize", "serde"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
uuid = { version = "1.19.0", features = ["serde", "v4"] }

[dev-dependencies]
tokio-test = "0.4.4"
dotenvy = "0.15"
once_cell = "1.19"
chrono = "0.4"
